--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 body {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
+	color: #8A8A8A;
 }
 .container {
 	width: 80%;
@@ -21,9 +22,17 @@ body {
 }
 
 /* Typo */
+h2 {
+	color: #000000;
+}
 h3 {
 	font-size: 30px;
 	font-weight: 400;
+}
+h4 {
+	color: #000000;
+	font-weight: 400;
+	margin: 15px 0;
 }
 
 /* Header */
@@ -77,12 +86,9 @@ header {
 	color: #fff;
 }
 
-.leadership {
-	background-color: #0086ff;
-}
 .leadership-title {
-	background-color: #abcfe7;
-	height: 80px;
+	/* background-color: #abcfe7;
+	height: 80px; */
 }
 
 .row {
@@ -90,8 +96,8 @@ header {
 }
 .col-left, .col-center, .col-right {
 	float: left;
-	background-color: #abcfe7;
-	border: 1px solid black;
+	/* background-color: #abcfe7;
+	border: 1px solid black; */
 }
 .col-left, .col-right {
 	width: 20%;
@@ -99,7 +105,25 @@ header {
 .col-center {
 	width: calc(60% - 40px);
 	margin: 0 20px;
-	font-weight: 300;
+}
+
+.col-img {
+	position: relative;
+	height: 240px;
+	border-radius: 10px;
+	overflow: hidden;
+	background-size: cover;
+    background-position: center;
+}
+
+#tizia {
+	background-image: url('../img/img-1.jpg');
+}
+#tizio {
+	background-image: url('../img/banner-2.jpg');
+}
+#gente {
+	background-image: url('../img/img-3.jpg');
 }
 
 /* Footer */
