--- a/css/style.css
+++ b/css/style.css
@@ -128,9 +128,13 @@ header {
 
 /* Footer */
 footer {
-	background-color: #8801fe;
-	height: 80px;
 	margin: 10px 0 20px 0;
+	color: #000000;
+	text-align: center;
+}
+footer span {
+	color: red;
+	font-size: 28px;
 }
 
 .test {
